Build cython from git for perf improvement

--- a/cython/Dockerfile
+++ b/cython/Dockerfile
@@ -1,6 +1,6 @@
 FROM python
 WORKDIR /tsp
 COPY . .
-RUN pip install cython && \
+RUN pip install git+https://github.com/cython/cython.git && \
   python setup.py build_ext --inplace
 CMD ["python3", "main.py", "coords.txt"]
