--- a/rs/Dockerfile
+++ b/rs/Dockerfile
@@ -2,4 +2,4 @@ FROM rust
 WORKDIR /tsp
 COPY . .
 RUN cargo build --release
-CMD ["cargo", "run", "--release", "--", "coords.txt"]
+CMD ["cargo", "run", "-q", "--release", "--", "coords.txt"]
