--- a/kotlin/Dockerfile
+++ b/kotlin/Dockerfile
@@ -2,11 +2,12 @@ FROM debian
 WORKDIR /tsp
 SHELL ["/bin/bash", "-c"]
 RUN apt update && \
-  apt install -y zip unzip curl default-jdk
+  apt install -y zip unzip curl default-jdk && \
+  curl -s https://get.sdkman.io | bash && \
+  source "/root/.sdkman/bin/sdkman-init.sh" && \
+  sdk install kotlin
 
 COPY . .
-RUN curl -s https://get.sdkman.io | bash && \
-  source "/root/.sdkman/bin/sdkman-init.sh" && \
-  sdk install kotlin && \
+RUN source "/root/.sdkman/bin/sdkman-init.sh" && \
   kotlinc tsp.kt -include-runtime -d tsp.jar
 CMD ["java", "-jar", "tsp.jar", "coords.txt"]
